2008-04-29  Corinna Vinschen  <corinna@vinschen.de>

	* mount.cc (mount_info::from_fstab): Skip native path prefix in
	module path.

2008-04-29  Corinna Vinschen  <corinna@vinschen.de>

	* syscalls.cc (rename): Use volume serial numbers stored in path_conv
	rather than fetching them here for the "same file" test.  Change
	comment to reflect this.

2008-04-28  Corinna Vinschen  <corinna@vinschen.de>

	* path.cc (symlink_info::check): Avoid special handling for
	STATUS_BUFFER_OVERFLOW when calling NtQueryDirectoryFile.
	* strace.cc (strace::vprntf): Use bigger buffer.

2008-04-28  Corinna Vinschen  <corinna@vinschen.de>

	* kernel32.cc (CreateFileMappingW): Remove stray small_printf.

2008-04-28  Corinna Vinschen  <corinna@vinschen.de>

	* autoload.cc (IsWow64Process): Remove.
	(Wow64DisableWow64FsRedirection): Remove.
	(Wow64RevertWow64FsRedirection): Remove.
	* ntdll.h (enum _PROCESSINFOCLASS): Define ProcessWow64Information.
	* init.cc (respawn_wow64_process): Use NtQueryInformationProcess to
	get WOW64 state.
	* wincap.cc (wincapc::init): Ditto.
	* wincap.h (wincapc::wow64): Change type to ULONG.

2008-04-27  Corinna Vinschen  <corinna@vinschen.de>

	* wincap.h (wincapc::wow64): Change type to BOOL.
	* wincap.cc: Remove explicit use of this pointer in wincapc methods.
	(wincapc::init): Fix bug in IsWow64Process handling.

2008-04-26  Corinna Vinschen  <corinna@vinschen.de>

	* dcrt0.cc (dll_crt0_0): Set SEM_NOGPFAULTERRORBOX error mode, too,
	to accommodate Vista/Longhorn.
	* spawn.cc (spawn_guts): Move check for CREATE_SUSPENDED condition
	after the call to ch.set() since it depends on it.

2008-04-25  Corinna Vinschen  <corinna@vinschen.de>

	* Makefile.in (install): Drop install rules for postinstall script.

2008-04-25  Corinna Vinschen  <corinna@vinschen.de>

	* postinstall: Remove (Moved to base-cygwin package).

2008-04-25  Corinna Vinschen  <corinna@vinschen.de>

	* fhandler.cc (fhandler_base::open): Move handling FILE_ATTRIBUTE_NORMAL