@@ -1,3 +1,15 @@
+2008-04-30  Corinna Vinschen  <corinna@vinschen.de>
+
+	* mount.cc (is_unc_share): Allow \\?\ prefix as well.  Enhance comment.
+	(mount_info::from_fstab): Remove patch from 2008-04-29.
+
+	* mount.cc (mount_info::conv_to_posix_path): Simplify test for native
+	UNC path.
+	* path.cc (normalize_win32_path): Ditto.
+	(symlink_worker): Ditto.
+	(symlink_info::posixify): Ditto.
+	(cygwin_conv_path): Ditto.
+
 2008-04-29  Corinna Vinschen  <corinna@vinschen.de>
 
 	* mount.cc (mount_info::from_fstab): Skip native path prefix in
